@@ -1,5 +1,11 @@
 1999-01-17  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
+	* Archiver.m (lispLoadArchiver): Renamed from
+	lispLoadArchiverExpr.
+	(hdf5LoadArchiver): New function.
+	([Archiver_c -createEnd]): Use it -- code of hdf5LoadArchiver was
+	here.
+
 	* DefObject.m ([Object_s -lispOut:deep:], [Object_s
 	-hdf5Out:deep:]): Use getTypeName instead of name.
 
